# -

./: .gitignore  CLAUDE.md  Procfile  RAILWAY_DEPLOY.md  README.md  demo_mobile_full_v1.html  demo_mobile_ui_v3.html  demo_onboarding_v1.html  demo_screener_v2.html  demo_ui_v2.html  pyproject.toml  railway.json  railway.toml  requirements.txt  rollback.sh
.nixpacks/: environment.toml
deploy/tencent/: .dockerignore  .env.example  Dockerfile  deploy.sh  docker-compose.yml
docs/: README.md  engineering-principles.md
docs/deploy/: changelog.md  railway.md
docs/deployment/: oauth-env.md
docs/design/: analysis-depth-mode.md  analysis-inbox.md  analysis-progress-truth-source.md  analysis-rendering.md  architecture-upgrade.md  batch-analyze-holdings.impl.md  batch-analyze-holdings.md  changelog.md  dashboard-holdings-quote-timeout-v1.1.md  hardening-iteration-v1.md  llm-fallback.md  llm-openrouter.md  mobile-optimization.md  mobile-react-island-fixes.md  mobile-ui-redesign-v2.md  mobile-ui-v1.3.1.md  mobile-ui-v1.3.md  model-switch.md  multi-tenant.md  oauth-quick-signin.md  onboarding.md  paper-trade-list-v1.md  paper-trade.md  product-architecture-optimization-instructions.md  schwab-integration.md  screener-history.md  screener-v2.md  screener-v3.md  ui-react-island.md  (+9 more)
scripts/: check_langgraph_install.py  gen_invites.py  schwab_bootstrap.py
stock_trading_system/: __init__.py  main.py
tests/: conftest.py  test_backtester.py  test_data_manager_gating.py  test_data_router.py  test_iterative.py  test_local_cache.py  test_qwen_extensions.py  test_schwab_provider.py
(+538 files in other folders)
