[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stock-trading-system"
version = "0.1.0"
description = "Stock Trading Advisory System - 股票辅助决策系统"
requires-python = ">=3.10"

[project.scripts]
stock = "stock_trading_system.main:main"

[tool.setuptools.packages.find]
include = ["stock_trading_system*"]

[tool.setuptools.package-data]
"stock_trading_system.config" = ["*.yaml"]
